[tool.poetry]
name = "seo-content-pipeline"
version = "0.1.0"
description = "Automated SEO content generation pipeline with crawling, keyword research, and content creation"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.0.0"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.0"
trafilatura = "^1.6.0"
playwright = "^1.40.0"
pandas = "^2.1.0"
xlsxwriter = "^3.1.0"
numpy = "^2.2.0"
scikit-learn = "^1.5.0"
spacy = "^3.7.0"
textstat = "^0.7.3"
nltk = "^3.8.0"
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
click = "^8.1.0"
rich = "^13.7.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
google-auth = "^2.23.0"
google-auth-oauthlib = "^1.1.0"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.108.0"
tenacity = "^8.2.0"
pyyaml = "^6.0"
orjson = "^3.9.0"
langdetect = "^1.0.9"
unidecode = "^1.3.7"
urllib3 = "^2.1.0"
robotexclusionrulesparser = "^1.7.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.0"
jupyter = "^1.0.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
seo-pipeline = "src.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "Q"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"